--- a/Containers/WebApps/dockerfile
+++ b/Containers/WebApps/dockerfile
@@ -1,1 +1,15 @@
+FROM microsoft/windowsservercore
 
+RUN powershell -Command Add-WindowsFeature Web-Server
+
+ADD ServiceMonitor.exe /ServiceMonitor.exe
+
+EXPOSE 80
+
+ENTRYPOINT ["C:\\ServiceMonitor.exe", "w3svc"]
+
+RUN mkdir C:\site
+
+RUN powershell -NoProfile -Command \
+    Import-module IISAdministration; \
+    New-IISSite -Name "AgileXRM" -PhysicalPath C:\site -BindingInformation "*:80:"
