--- a/Containers/WebApps/Dockerfile
+++ b/Containers/WebApps/Dockerfile
@@ -12,3 +12,7 @@ RUN mkdir C:\site
 
 RUN powershell -NoProfile -Command \
     .\CreateAgileXRMWebSites.ps1
+RUN powershell -NoProfile -Command \
+    Expand-Archive -Path https://agilexrmazurestorage.blob.core.windows.net/containers/test.zip?st=2017-08-08T15%3A57%3A00Z&se=2018-08-09T15%3A57%3A00Z&sp=rl&sv=2015-12-11&sr=b&sig=w7xheMc32SuzQIuNiBGFiAnNv%2BSs8nGIneMajwV60IM%3D \ 
+                    -DestinationPath C:\Site -Force
+  
